--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="nomeUtente">Nome: </div>
+    <div id="cognomeUtente">Cognome: </div>
+    <div id="coloreUtente">Colore: </div>
+    <div id="passwordUtente">Password: </div>
 
-    <script src="/script.js"
+    <script src="/script.js"></script>
 </body>
 </html>
